[gd_scene load_steps=17 format=2]

[ext_resource path="res://Temporary Clipart/thoughtbubble.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Baby.gd" type="Script" id=2]
[ext_resource path="res://Art/baby gertrude sprite sheet.png" type="Texture" id=3]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 256, 192, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 256, 192, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1, 11, 192, 250 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1, 259, 192, 248 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 256, 192, 256 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "crying",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "smiling",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 41, 15 )

[sub_resource type="DynamicFont" id=11]
size = 37
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 173, 158.5 )

[node name="BabyGertrude" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, -9 )
scale = Vector2( 0.345833, 0.345833 )
frames = SubResource( 9 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 25 )
shape = SubResource( 10 )

[node name="Speech" type="TextureRect" parent="."]
margin_left = -22.0
margin_top = -88.0
margin_right = 478.0
margin_bottom = 449.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Speech"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.5
margin_top = -189.0
margin_right = -127.5
margin_bottom = -156.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "A"
align = 1

[node name="Timer" type="Timer" parent="Speech"]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -7, 17.5 )
shape = SubResource( 12 )

[connection signal="timeout" from="Speech/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
